Cleaned up random text, fixed font on mobile

--- a/css/style.less
+++ b/css/style.less
@@ -82,9 +82,9 @@ body {
   .box-sizing();
   @media @mobile {
     background-position: 0 0;
+    overflow: hidden;
   }
   .group-left {
-    position: relative;
     @media @mobile {
       max-height: 200px;
     }
@@ -105,13 +105,13 @@ body {
       .top-line {
         .font-size(6);
         @media @mobile {
-          .font-size(4);
+          .font-size(3.5);
         }
       }
       .bottom-line {
         .font-size(2.4);
         @media @mobile {
-          .font-size(1.8);
+          .font-size(1.6);
         }
       }
     }
